--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<link rel="stylesheet" href="css/themify-icons.css" media="all" />
 		<link rel="stylesheet" href="css/animate.min.css" media="all" />
 
+
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 				<!-- never cache patterns -->
 		<meta http-equiv="cache-control" content="max-age=0" />
@@ -42,19 +43,12 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 
-
 		<!-- End Pattern Lab -->
 
 	</head>
 	<body class="home" onLoad=“window.scroll(0,0)“>
-<!-- <div id="video_bg" class="video_bg">
-		<video width="100%" height="auto" autoplay="autoplay">
-		  <source src="video/LifeCodedTest.mp4" type='video/mp4'>
-		  <source src="video/LifeCodedTest1.webm" type='video/webm'>
-		</video>
-	</div> -->
+
 <div class="page" id="page">
-	<!-- Begin .header -->
 
 	<!-- Video Background -->
 	<video id="vidbg" poster="images/header_poster.jpg" id="bgvid" playsinline autoplay muted loop>
@@ -65,7 +59,7 @@
 
 	<header class="header full-width" role="banner">
 	    <div class="lc">
-    	<a href="#"><img src="images/Logo-White.png" class="logo" alt="Life Coded Black" width="120px" /></a>
+    	<a href="#"><img src="images/Logo-purple.png" class="logo" alt="Life Coded Black" width="120px" /></a>
     	<nav id="nav" class="nav nav-white">
     		<ul class="nav-list">
     			<li><a href="#">Home</a></li>
@@ -80,7 +74,7 @@
 	        <div class="tagline" id="tagline">
         <h1 class="intro">Tools for teams.</h1>
         <p>We make productivity apps to help manage teamwork.</p>
-	        <a href="#about" class="btn btn-w">Learn More</a>
+	        <a href="#about" class="btn btn-p">Learn More</a>
 	        </div>
 	    </div>
 	</header>
@@ -106,77 +100,85 @@
 	</header>
 	<!-- / sticky header -->
 
-	<section class="about_us white-space" id="about">
+	<!-- <section class="about_us white-space" id="about">
 	    <div class="lc">
 	        <h1>About</h1>
 	        <div class="about_p small">
-	            <!-- <p>Founded in 2011, Life Coded is a New York City-based startup specializing in the design and development of productivity and management apps. Our mission is in our name, Life Coded: real world software design. We help people manage the ever-increasing data of daily life so they can get home on time.</p>
-	            <p>With aesthetic design in our DNA, we’re obsessed with making our products as visually clean and simple as possible. Life Coded is a group of engineers, scientists, designers and entrepreneurs that work in agile teams, on huge multi-year problems, that aren't done until we or someone else had solved them. We’re powering human intuition with artificial intelligence and every day we work hard to make very complex things simple. Our mission is in our name: Life Coded – software that integrates with life. If you want to help push the boundaries of what teams can do together, get in touch.</p> -->
+	            <p>Founded in 2011, Life Coded is a New York City-based startup specializing in the design and development of productivity and management apps. Our mission is in our name, Life Coded: real world software design. We help people manage the ever-increasing data of daily life so they can get home on time.</p>
+	            <p>With aesthetic design in our DNA, we’re obsessed with making our products as visually clean and simple as possible. Life Coded is a group of engineers, scientists, designers and entrepreneurs that work in agile teams, on huge multi-year problems, that aren't done until we or someone else had solved them. We’re powering human intuition with artificial intelligence and every day we work hard to make very complex things simple. Our mission is in our name: Life Coded – software that integrates with life. If you want to help push the boundaries of what teams can do together, get in touch.</p>
 	            <p>Life Coded is a group of engineers, coders, designers and entrepreneurs that work in agile teams, on huge multi-year problems. With aesthetic design in our DNA, we’re obsessed with making our products as visually clean and simple as possible.</p>
 	            <p>Every day we work hard to make complex things simple. Our mission is in our name:<br> Life Coded – software that integrates with life.</p> <p>If you want to help push the boundaries of what teams can do together, get in touch.</p>
 	        </div>
 	    </div>
-	</section>
+	</section> -->
 	<section id="goals" class="goals">
-		<div class="fw-table fh light-sky goal-1">
-			<div class="lc ver-c">
-				<h2>The Artificial Intelligence</h2>
+		<div id="particles-js">
+			<div class="lc fh fw-table">
+				<div class="goal-number is-rotated pink">01</div>
+				<div class="ver-c">
+					<h2>The Artificial Intelligence</h2>
+					<p>Ut sit amet magna orci. Integer sit amet varius ipsum. Ut mattis ullamcorper fermentum. Integer pretium felis sit amet urna volutpat, ac elementum ante interdum.</p>
+				</div>
 			</div>
 		</div>
-		<div class="fw-table fh france-blue goal-2">
-			<div class="lc ver-c">
-				<h2 class="white-text">The Automation</h2>
+
+		<div class="blueblack goal-2">
+			<div class="lc fh fw-table">
+				<div class="goal-number is-rotated cyan">02</div>
+				<div class="ver-c">
+					<h2>The Automation</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed sapien quam. Sed dapibus est id enim facilisis, at posuere turpis adipiscing. Quisque sit amet dui dui.</p>
+				</div>
 			</div>
 		</div>
-		<div class="fw-table fh deep-koamaru goal-3">
-			<div class="lc ver-c">
-				<h2 class="white-text">Bringing project management to the masses</h2>
+		<div class="blueblack goal-3">
+			<div class="lc fw-table fh">
+				<div class="goal-number is-rotated orange">03</div>
+				<div class="ver-c">
+					<h2>Bringing project management to the masses</h2>
+					<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
+				</div>
 			</div>
 		</div>
-		<div class="fw-table fh gray-bg-1 goal-4">
-			<div class="lc ver-c">
-				<h2>Helping teams everywhere communicate</h2>
+		<div class="blueblack goal-4">
+			<div class="lc fw-table fh">
+				<div class="goal-number is-rotated green">04</div>
+				<div class="ver-c">
+					<h2>Helping teams everywhere communicate</h2>
+					<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
+				</div>
 			</div>
 		</div>
 	</section>
-		<section class="products white-space" id="products">
-		    <div class="lc">
-		        <h1>Our Products</h1>
-	       	</div>
-			    <div class="fw blue-bg">
-			        <!--Product 2up-->
-			        <div class="lc">
-				        <div class="product-image fl">
-				            <img src="images/mosaic_product.png" alt="Mosaic Web and mobile app">
-			            </div>
-			            <div class="text-box fr">
+		<section class="products" id="products">
+			    <div class="blueblack">
+	    		    <div class="lc">
+		        		<h3>Our Products</h3>
+	       			</div>
+
+			        <div class="lc fw">
+			        	<div class="text-box">
 		                    <h2>Mosaic</h2>
 		                    <!-- <p>Mosaic allows teams to easily create projects, assign tasks, add status updates and notes, and set milestones and schedules. Mosaic aims to be the simplest way for teams to work together, organizing all project information in one place. Personal and project schedules are handled with a patented automation feature, while AI components facilitate communication and replace middle management.</p> -->
 		                    <p>Mosaic aims to be the simplest way for teams to work together, organizing all project information in one place. Easily create projects, assign tasks, add status updates and notes, and set milestones and schedules. Personal and project schedules are handled with a patented automation feature, while AI components facilitate communication and serves as your personal assistant.</p>
 		                    <a class="btn btn-w button" href="https://mosaicapp.com" target="_blank">Check Out</a>
 			            </div>
+				        <div class="product-image">
+				            <img src="images/mosaic_product.png" alt="Mosaic Web and mobile app">
+			            </div>
 			        </div>
-		        </div>
-		        <div class="fw catalina-blue">
-		        	<div class="lc">
-		                <div class="text-box fl">
+
+		        	<div class="lc fw">
+		                <div class="text-box">
 		                    <h2>Chello <span>In development</span></h2>
 		                    <p>Chello (in development) is automating your teams' project communication, handling everything you've asked and been asked to do. In between is infinitely scaling big data including email, messaging, files and tasks. Chello integrates with Mosaic for the management of those tasks.</p>
 		                </div>
-		                <div class="product-image fr">
+		                <div class="product-image">
 		            		<img src="images/cello_product.png" alt="Cello Web app">
 	            		</div>
         			</div>
-	            </div>
+    			</div>
 		</section>
-
-<!-- 	<section class="menifesto white-space">
-		<div class="lc">
-			<div class="center-e small-inset">
-				<h3>We've been making management and productivity apps for over five years.<br> We believe that great products take a long time to develop and that things need to be changed to make them possible.</h3>
-			</div>
-		</div>
-	</section> -->
 
 	<section class="hiring white-space" id="hiring">
 	    <div class="lc">
@@ -276,8 +278,10 @@
 		            		<h3>Lead Front-end Developer</h3>
 		            		<div>
 		            			<h4>Job Description</h4>
-		            			<p>Life Coded is seeking an expert Lead Frontend Developer to join our team. This role will be working on creating Mosaic (mosaicapp.com), the simplest way to manage teamwork. This is a rare chance to work at a relatively early stage of development with cutting edge frameworks, patented automation and heavy reliance on artificial intelligence.</p>
-		            			<p>We hire top talent establishing Life Coded as a tech leader. For this position, we're looking past the black and white requirements to find the right person to help us develop beautiful and innovative products. As we grow rapidly, you will be a cornerstone in the direction and development of our product suite and will have the opportunity to make a real impact in a very short period of time. At Life Coded, there’s no limit to where we will go.</p>
+		            			<p>Think current project management apps are broken?<br>
+		            			Join Mosaic to help build an innovative project management tool.</p>
+		            			<p>Mosaic is seeking a Lead Frontend Developer/React.js expert to join our team. This role will be working on creating Mosaic, the simplest way to manage teamwork (mosaicapp.com). This is a rare chance to work at a relatively early stage of development on core functionality with cutting edge frameworks, patented automation and heavy reliance on artificial intelligence.</p>
+		            			<p>For this position, we're looking past the black and white requirements to find the right person to help us develop Mosaic's beautiful and innovative user interface. As we grow rapidly, you will be a cornerstone in the direction and development of our product suite and will have the opportunity to make a real impact in a very short period of time. We are in a market competing with Trello (recently sold for $425M) and Quip (recently sold for $750M).</p>
 		            			<hr>
 		            			<h4>Our Vision</h4>
 		            			<p>Founded in 2012, Life Coded, LLC is a startup specializing in the design and development of productivity apps. We make productivity products to help people accomplish bigger goals with less effort. We are currently building two project management tools - Chello and Mosaic. Mosaic manages the high level project info. Chello is the day to day back and forth between the team. Both of our latest apps are using cutting edge frameworks including React.js and React Native for building Mosaic and Chello for people who don't have time for project management.Here at Life Coded, aesthetic design is in our DNA. We’re also obsessed with user behavior and making things as simple as possible for them. Our mission is in our name; Life and Coded - real world software design. Check out Mosaic at <a href="mosaicapp.com" target="_blank">https://mosaicapp.com</a></p>
@@ -295,12 +299,13 @@
 		            			<hr>
 		            			<h4>Requirement</h4>
 		            			<ul class="list-d">
-		            				<li>Bachelor's Degree required; Computer Science a plus</li>
-		            				<li>2-6 years of professional work experience (with 6+ years coding)</li>
+		            				<li>1+ years of hands on React.js experience is required</li>
+		            				<li>5+ years of coding experience</li>
 		            				<li>Experience with Software as a Service</li>
 		            				<li>Experience developing reliable rich JavaScript web apps</li>
 		            				<li>Developed and released applications in a production environment with high user traffic</li>
 		            				<li>Bonus points for React Native, mobile development, or back end experience</li>
+		            				<li>Bachelor's Degree required; Computer Science a plus</li>
 		            				<li>Working from our New York City office (at 32nd & Madison) is required</li>
 		            			</ul>
 		            			<hr>
@@ -425,6 +430,7 @@
 	<!--DO NOT REMOVE-->
 
 	<script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
+	<script src="js/particles.js"></script>
 	<script src="js/app.js"></script>
 
 
