Added particle js set up on all goals

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</section> -->
 	<section id="goals" class="goals">
 		<div id="particles-js">
-			<div class="lc fh fw-table">
+			<div class="lc fw-table">
 				<div class="goal-number is-rotated pink">01</div>
 				<div class="ver-c">
 					<h2>The Artificial Intelligence</h2>
@@ -122,8 +122,8 @@
 			</div>
 		</div>
 
-		<div class="blueblack goal-2">
-			<div class="lc fh fw-table">
+		<div id="particle-js">
+			<div class="lc fw-table">
 				<div class="goal-number is-rotated cyan">02</div>
 				<div class="ver-c">
 					<h2>The Automation</h2>
@@ -131,8 +131,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="blueblack goal-3">
-			<div class="lc fw-table fh">
+
+		<div id="particle-js">
+			<div class="lc fw-table">
 				<div class="goal-number is-rotated orange">03</div>
 				<div class="ver-c">
 					<h2>Bringing project management to the masses</h2>
@@ -140,8 +141,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="blueblack goal-4">
-			<div class="lc fw-table fh">
+
+		<div id="particle-js">
+			<div class="lc fw-table">
 				<div class="goal-number is-rotated green">04</div>
 				<div class="ver-c">
 					<h2>Helping teams everywhere communicate</h2>
@@ -149,6 +151,7 @@
 				</div>
 			</div>
 		</div>
+
 	</section>
 		<section class="products" id="products">
 			    <div class="blueblack">
