--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	        </div>
 	    </div>
 	</section> -->
-	<section id="goals" class="goals">
+	<section id="about" class="goals">
 		<div id="particles-js">
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated pink">01</div>
@@ -122,7 +122,7 @@
 			</div>
 		</div>
 
-		<div id="particle-js">
+		<div id="particles-js-2">
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated cyan">02</div>
 				<div class="ver-c">
@@ -132,7 +132,7 @@
 			</div>
 		</div>
 
-		<div id="particle-js">
+		<div id="particles-js-3">
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated orange">03</div>
 				<div class="ver-c">
@@ -142,7 +142,7 @@
 			</div>
 		</div>
 
-		<div id="particle-js">
+		<div id="particles-js-4">
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated green">04</div>
 				<div class="ver-c">
