--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated cyan">02</div>
 				<div class="ver-c">
-					<h2>The Automation</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed sapien quam. Sed dapibus est id enim facilisis, at posuere turpis adipiscing. Quisque sit amet dui dui.</p>
+					<div class="goal-copy">
+						<h2>The Automation</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed sapien quam. Sed dapibus est id enim facilisis, at posuere turpis adipiscing. Quisque sit amet dui dui.</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -136,8 +138,10 @@
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated orange">03</div>
 				<div class="ver-c">
-					<h2>Bringing project management to the masses</h2>
-					<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
+					<div class="goal-copy">
+						<h2>Bringing project management to the masses</h2>
+						<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -146,8 +150,10 @@
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated green">04</div>
 				<div class="ver-c">
-					<h2>Helping teams everywhere communicate</h2>
-					<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
+					<div class="goal-copy">
+						<h2>Helping teams everywhere communicate</h2>
+						<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
+					</div>
 				</div>
 			</div>
 		</div>
