--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated pink">01</div>
 				<div class="ver-c">
-					<h2>The Artificial Intelligence</h2>
-					<p>Ut sit amet magna orci. Integer sit amet varius ipsum. Ut mattis ullamcorper fermentum. Integer pretium felis sit amet urna volutpat, ac elementum ante interdum.</p>
+					<div class="goal-copy">
+						<h2>The Artificial Intelligence</h2>
+						<p>Ut sit amet magna orci. Integer sit amet varius ipsum. Ut mattis ullamcorper fermentum. Integer pretium felis sit amet urna volutpat, ac elementum ante interdum.</p>
+					</div>
 				</div>
 			</div>
 		</div>
