Changed sticky header to black

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	<!-- Sticky Header -->
 	<header class="sticky_h">
 	    <div class="lc">
-	        <a href="#"><img src="images/logo_black.png" class="logo" alt="Life Coded Black" /></a>
+	        <a href="#"><img src="images/logo_white_sm 2.png" class="logo" alt="Life Coded Logo" /></a>
 
 			<nav id="nav" class="nav nav-black sticky_n">
 	    		<ul class="nav-list">
