--- a/index.html
+++ b/index.html
@@ -43,7 +43,23 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 
-		<!-- End Pattern Lab -->
+		<!-- load and instantiate ScrollReveal first -->
+	    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+	    <script>
+	      window.sr = ScrollReveal();
+
+	      // Add class to <html> if ScrollReveal is supported
+	      // Note: this method is deprecated, and only works in version 3
+	      if (sr.isSupported()) {
+	        document.documentElement.classList.add('sr');
+	      }
+
+	    </script>
+
+		<style>
+	      /* Ensure elements load hidden before ScrollReveal runs */
+	      .sr .reveal { visibility: hidden; }
+		</style>
 
 	</head>
 	<body class="home" onLoad=“window.scroll(0,0)“>
@@ -71,7 +87,7 @@
     	</nav><!--end .nav-->
 
 
-	        <div class="tagline" id="tagline">
+	        <div class="tagline reveal" id="tagline">
         <h1 class="intro">Tools for teams.</h1>
         <p>We make productivity apps to help manage teamwork.</p>
 	        <a href="#about" class="btn btn-p">Learn More</a>
@@ -116,7 +132,7 @@
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated pink">01</div>
 				<div class="ver-c">
-					<div class="goal-copy">
+					<div class="goal-copy-1 reveal">
 						<h2>The Artificial Intelligence</h2>
 						<p>Ut sit amet magna orci. Integer sit amet varius ipsum. Ut mattis ullamcorper fermentum. Integer pretium felis sit amet urna volutpat, ac elementum ante interdum.</p>
 					</div>
@@ -128,7 +144,7 @@
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated cyan">02</div>
 				<div class="ver-c">
-					<div class="goal-copy">
+					<div class="goal-copy-2 reveal">
 						<h2>The Automation</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed sapien quam. Sed dapibus est id enim facilisis, at posuere turpis adipiscing. Quisque sit amet dui dui.</p>
 					</div>
@@ -140,7 +156,7 @@
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated orange">03</div>
 				<div class="ver-c">
-					<div class="goal-copy">
+					<div class="goal-copy-3 reveal">
 						<h2>Bringing project management to the masses</h2>
 						<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
 					</div>
@@ -152,7 +168,7 @@
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated green">04</div>
 				<div class="ver-c">
-					<div class="goal-copy">
+					<div class="goal-copy-4 reveal">
 						<h2>Helping teams everywhere communicate</h2>
 						<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
 					</div>
@@ -168,23 +184,23 @@
 	       			</div>
 
 			        <div class="lc fw">
-			        	<div class="text-box">
+			        	<div class="text-box reveal">
 		                    <h2>Mosaic</h2>
 		                    <!-- <p>Mosaic allows teams to easily create projects, assign tasks, add status updates and notes, and set milestones and schedules. Mosaic aims to be the simplest way for teams to work together, organizing all project information in one place. Personal and project schedules are handled with a patented automation feature, while AI components facilitate communication and replace middle management.</p> -->
 		                    <p>Mosaic aims to be the simplest way for teams to work together, organizing all project information in one place. Easily create projects, assign tasks, add status updates and notes, and set milestones and schedules. Personal and project schedules are handled with a patented automation feature, while AI components facilitate communication and serves as your personal assistant.</p>
 		                    <a class="btn btn-w button" href="https://mosaicapp.com" target="_blank">Check Out</a>
 			            </div>
-				        <div class="product-image">
+				        <div class="product-image reveal">
 				            <img src="images/mosaic_product.png" alt="Mosaic Web and mobile app">
 			            </div>
 			        </div>
 
 		        	<div class="lc fw">
-		                <div class="text-box">
+		                <div class="text-box reveal">
 		                    <h2>Chello <span>In development</span></h2>
 		                    <p>Chello (in development) is automating your teams' project communication, handling everything you've asked and been asked to do. In between is infinitely scaling big data including email, messaging, files and tasks. Chello integrates with Mosaic for the management of those tasks.</p>
 		                </div>
-		                <div class="product-image">
+		                <div class="product-image reveal">
 		            		<img src="images/cello_product.png" alt="Cello Web app">
 	            		</div>
         			</div>
@@ -506,8 +522,9 @@
 			}
 		})();
 	</script>
-
-
+	<script>
+      sr.reveal('.reveal', { duration: 700 }, { scale: 1 } );
+    </script>
 
 	</body>
 </html>
