Adjusted reveal animation

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 		})();
 	</script>
 	<script>
-      sr.reveal('.reveal', { duration: 700 }, { scale: 1 } );
+      sr.reveal('.reveal', { duration: 900, delay: 100, scale: 1, distance: '40px' } );
     </script>
 
 	</body>
