Added one more position

--- a/index.html
+++ b/index.html
@@ -116,17 +116,6 @@
 	</header>
 	<!-- / sticky header -->
 
-	<!-- <section class="about_us white-space" id="about">
-	    <div class="lc">
-	        <h1>About</h1>
-	        <div class="about_p small">
-	            <p>Founded in 2011, Life Coded is a New York City-based startup specializing in the design and development of productivity and management apps. Our mission is in our name, Life Coded: real world software design. We help people manage the ever-increasing data of daily life so they can get home on time.</p>
-	            <p>With aesthetic design in our DNA, we’re obsessed with making our products as visually clean and simple as possible. Life Coded is a group of engineers, scientists, designers and entrepreneurs that work in agile teams, on huge multi-year problems, that aren't done until we or someone else had solved them. We’re powering human intuition with artificial intelligence and every day we work hard to make very complex things simple. Our mission is in our name: Life Coded – software that integrates with life. If you want to help push the boundaries of what teams can do together, get in touch.</p>
-	            <p>Life Coded is a group of engineers, coders, designers and entrepreneurs that work in agile teams, on huge multi-year problems. With aesthetic design in our DNA, we’re obsessed with making our products as visually clean and simple as possible.</p>
-	            <p>Every day we work hard to make complex things simple. Our mission is in our name:<br> Life Coded – software that integrates with life.</p> <p>If you want to help push the boundaries of what teams can do together, get in touch.</p>
-	        </div>
-	    </div>
-	</section> -->
 	<section id="about" class="goals">
 		<div id="particles-js">
 			<div class="lc fw-table">
@@ -214,7 +203,7 @@
 	            <p class="small-inset">At Life Coded we're powering human intuition with artificial intelligence.<br>We help teams work together more efficiently, accomplishing larger goals in less time. Join us.</p>
 	            <div class="table">
 		            <ul class="job-list">
-		            	<!-- <li><button class="button btn-w md-trigger" data-target-modal="modal-1">Frontend Web Developer</button></li> -->
+		            	<li><button class="button btn-w md-trigger" data-target-modal="modal-1">React.js Software Engineer</button></li>
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-3">Lead Frontend Web Developer</button></li>
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-2">Sr. Product Manager</button></li>
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-4">Sales Associate</button></li>
@@ -224,20 +213,31 @@
 		            <div class="md-modal" id="modal-1">
 	            		<a class="md-close">Close</a>
 		            	<div class="md-content">
-		            		<h3>Frontend Web Developer</h3>
+		            		<h3>React.js Software Engineer</h3>
 		            		<div>
 		            			<h4>Job Description</h4>
-		            			<p>Founded in 2012, Life Coded, LLC is a startup specializing in the design and development of productivity apps. We make productivity products to help people accomplish bigger goals with less effort. We are currently building two project management tools - Chello and Mosaic. Mosaic manages the high level project info. Chello is the day to day back and forth between the team. Both of our latest apps are using cutting edge frameworks including React.js and React Native for building Mosaic and Chello for people who don't have time for project management.Here at Life Coded, aesthetic design is in our DNA. We’re also obsessed with user behavior and making things as simple as possible for them. Our mission is in our name; Life and Coded - real world software design. Check out Mosaic at <a href="mosaicapp.com" target="_blank">https://mosaicapp.com</a></p>
+		            			<p>Think current project management apps are broken?<br/>
+								Join Mosaic to help build an innovative project management tool. </p>
+		            			<p>Life Coded is seeking a Lead React.js Software Engineer to work on the Mosaic team. This senior level role will be working on making Mosaic one of the top project management software. This is a rare chance to lead a team working with cutting edge frameworks, patented automation and heavy reliance on artificial intelligence/bots.</p>
+		            			<p>For this position, we're looking past the black and white requirements to find the right person to help us craft Mosaic's beautiful and innovative user interface. As we grow rapidly, you will be a cornerstone in the direction and development of our product suite and will have the opportunity to make a real impact in cultivating a team of great developers.</p>
+		            			<hr>
+		            			<h4>Responsibilities</h4>
+		            			<ul class="list-d">
+		            				<li>Lead and collaborate with a quickly growing team</li>
+		            				<li>Take ownership of the frontend development of Mosaic</li>
+		            				<li>Brainstorm and execute the development of new features, overseeing projects from A-Z</li>
+		            				<li>Work closely with other business units in the development process, design, product, and marketing</li>
+		            			</ul>
+		            			<hr>
+		            			<h4>Our Stack</h4>
+		            			<p>React.js, React Native, Ruby on Rails, Python</p>
 		            			<hr>
 		            			<h4>Requirement</h4>
 		            			<ul class="list-d">
-		            				<li>Bachelor's Degree </li>
-		            				<li>2-6 years of professional work experience (with 6+ years coding)</li>
-		            				<li>Experience in developing reliable rich JavaScript web apps</li>
-		            				<li>Developed and released applications in a production environment with actual user traffic </li>
-		            				<li>Experience in Single Page Web Apps </li>
-		            				<li>Bonus points for jQuery, React.js, React Native and mobile development experience</li>
-		            				<li>Working from our New York City office (at 32nd & Madison) is required</li>
+		            				<li>5+ years of coding experience</li>
+		            				<li>React.js experience is a must</li>
+		            				<li>Experience working SaaS/PaaS with high user traffic is a must</li>
+		            				<li>Bachelor's Degree required; Computer Science a plus</li>
 		            			</ul>
 		            			<hr>
 		            			<h4>Perks</h4>
