Small fix on job button

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	            <p class="small-inset">At Life Coded we're powering human intuition with artificial intelligence.<br>We help teams work together more efficiently, accomplishing larger goals in less time. Join us.</p>
 	            <div class="table">
 		            <ul class="job-list">
-		            	<li><button class="button btn-w md-trigger" data-target-modal="modal-1">React.js Software Engineer</button></li>
+		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-1">React.js Software Engineer</button></li>
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-3">Lead Frontend Web Developer</button></li>
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-2">Sr. Product Manager</button></li>
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-4">Sales Associate</button></li>
