--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 
 	        <div class="tagline reveal" id="tagline">
-        <h1 class="intro">Tools for teams.</h1>
-        <p>We make productivity apps to help manage teamwork.</p>
+        <h1 class="intro">Project Management Software is broken for small businesses.</h1>
+        <h1>Life Coded is working on fixing it.</h1>
 	        <a href="#about" class="btn btn-p">Learn More</a>
 	        </div>
 	    </div>
