Edits from John

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 
 	        <div class="tagline reveal" id="tagline">
-        <h1 class="intro">Project Management Software is broken for small businesses.</h1>
-        <h1>Life Coded is working on fixing it.</h1>
+        <h1 class="intro">Project Management Software is broken for small businesses.<br><br>
+        Life Coded is working on fixing it.</h1>
 	        <a href="#about" class="btn btn-p">Learn More</a>
 	        </div>
 	    </div>
@@ -133,8 +133,8 @@
 				<div class="goal-number is-rotated pink">01</div>
 				<div class="ver-c">
 					<div class="goal-copy-1 reveal">
-						<h2>The Artificial Intelligence</h2>
-						<p>Ut sit amet magna orci. Integer sit amet varius ipsum. Ut mattis ullamcorper fermentum. Integer pretium felis sit amet urna volutpat, ac elementum ante interdum.</p>
+						<h2>Simple</h2>
+						<p>With aesthetic design in our DNA, we’re obsessed with making complex things simple. Our software helps you visualize your projects in a way never before possible.</p>
 					</div>
 				</div>
 			</div>
@@ -145,8 +145,9 @@
 				<div class="goal-number is-rotated cyan">02</div>
 				<div class="ver-c">
 					<div class="goal-copy-2 reveal">
-						<h2>The Automation</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed sapien quam. Sed dapibus est id enim facilisis, at posuere turpis adipiscing. Quisque sit amet dui dui.</p>
+						<h2>Automated</h2>
+						<p>We look to automate things so you don’t have to worry about them. For example, automatically re-scheduling your tasks based on what you’ve completed.</p>
+						<p><span class="footnote">Protected under US Patent #8893140 B2.</span></p>
 					</div>
 				</div>
 			</div>
@@ -157,14 +158,15 @@
 				<div class="goal-number is-rotated orange">03</div>
 				<div class="ver-c">
 					<div class="goal-copy-3 reveal">
-						<h2>Bringing project management to the masses</h2>
-						<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
+						<h2>Artificial Intelligence</h2>
+						<p>Our AI bot assistant distributes work and manages conflicting tasks, deadlines and schedules. It handles the resulting domino effects of the rescheduling of each team members schedules.</p>
+						<p><span class="footnote">Protected under US Patent #20130191836 A1.</span></p>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div id="particles-js-4">
+		<!-- <div id="particles-js-4">
 			<div class="lc fw-table">
 				<div class="goal-number is-rotated green">04</div>
 				<div class="ver-c">
@@ -172,6 +174,14 @@
 						<h2>Helping teams everywhere communicate</h2>
 						<p>Nam auctor eget quam vitae fringilla. Vestibulum quam orci, porttitor in nisl aliquam, placerat gravida ligula. Quisque sed malesuada velit.</p>
 					</div>
+				</div>
+			</div>
+		</div> -->
+
+		<div class="lc fw-table">
+			<div class="ver-c">
+				<div class="goal-copy-4 reveal">
+					<h2>At Life Coded we're powering human intuition with artificial intelligence to replace mid-level management.</h2>
 				</div>
 			</div>
 		</div>
@@ -187,22 +197,17 @@
 			        	<div class="text-box reveal">
 		                    <h2>Mosaic</h2>
 		                    <!-- <p>Mosaic allows teams to easily create projects, assign tasks, add status updates and notes, and set milestones and schedules. Mosaic aims to be the simplest way for teams to work together, organizing all project information in one place. Personal and project schedules are handled with a patented automation feature, while AI components facilitate communication and replace middle management.</p> -->
-		                    <p>Mosaic aims to be the simplest way for teams to work together, organizing all project information in one place. Easily create projects, assign tasks, add status updates and notes, and set milestones and schedules. Personal and project schedules are handled with a patented automation feature, while AI components facilitate communication and serves as your personal assistant.</p>
-		                    <a class="btn btn-w button" href="https://mosaicapp.com" target="_blank">Check Out</a>
-			            </div>
-				        <div class="product-image reveal">
-				            <img src="images/mosaic_product.png" alt="Mosaic Web and mobile app">
+		                    <h3>manages teamwork</h3>
+		                    <p><a href="https://mosaicapp.com" target="_blank">http://mosaicapp.com</a></p>
 			            </div>
 			        </div>
 
 		        	<div class="lc fw">
 		                <div class="text-box reveal">
-		                    <h2>Chello <span>In development</span></h2>
-		                    <p>Chello (in development) is automating your teams' project communication, handling everything you've asked and been asked to do. In between is infinitely scaling big data including email, messaging, files and tasks. Chello integrates with Mosaic for the management of those tasks.</p>
+		                    <h2>Chello</h2>
+		                    <h3>manages communication</h3>
+		                    <p>coming soon...</p>
 		                </div>
-		                <div class="product-image reveal">
-		            		<img src="images/cello_product.png" alt="Cello Web app">
-	            		</div>
         			</div>
     			</div>
 		</section>
