--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 	        <div class="tagline reveal" id="tagline">
-        <h1 class="intro">Project Management Software is broken for small businesses.<br><br>
+        <h1 class="intro">Project Management Software is broken for small businesses.<br>
         Life Coded is working on fixing it.</h1>
 	        <a href="#about" class="btn btn-p">Learn More</a>
 	        </div>
