Updated Goal background particles

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<div class="ver-c">
 					<div class="goal-copy-1 reveal">
 						<h2>Simple</h2>
-						<p>With aesthetic design in our DNA, we’re obsessed with making complex things simple. Our software helps you visualize your projects in a way never before possible.</p>
+						<p class="top_bar">With aesthetic design in our DNA, we’re obsessed with making complex things simple. Our software helps you visualize your projects in a way never before possible.</p>
 					</div>
 				</div>
 			</div>
@@ -135,7 +135,7 @@
 				<div class="ver-c">
 					<div class="goal-copy-2 reveal">
 						<h2>Automated</h2>
-						<p>We look to automate things so you don’t have to worry about them. For example, automatically re-scheduling your tasks based on what you’ve completed.</p>
+						<p class="top_bar">We look to automate things so you don’t have to worry about them. For example, automatically re-scheduling your tasks based on what you’ve completed.</p>
 						<p><span class="footnote">Protected under US Patent #8893140 B2.</span></p>
 					</div>
 				</div>
@@ -148,7 +148,7 @@
 				<div class="ver-c">
 					<div class="goal-copy-3 reveal">
 						<h2>Artificial Intelligence</h2>
-						<p>Our AI bot assistant distributes work and manages conflicting tasks, deadlines and schedules. It handles the resulting domino effects of the rescheduling of each team members schedules.</p>
+						<p class="top_bar">Our AI bot assistant distributes work and manages conflicting tasks, deadlines and schedules. It handles the resulting domino effects of the rescheduling of each team members schedules.</p>
 						<p><span class="footnote">Protected under US Patent #20130191836 A1.</span></p>
 					</div>
 				</div>
