Added paragraph section and gallery

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     			<li><a href="#">Home</a></li>
     			<li><a href="#about">About</a></li>
     	        <li><a href="#products">Products</a></li>
-    			<!-- <li><a href="#blog">Blog</a></li> -->
+    			<li><a href="#hiring">Jobs</a></li>
     			<li><a href="#footer">Contact</a></li>
     		</ul>
     	</nav><!--end .nav-->
@@ -204,6 +204,33 @@
         			</div>
     			</div>
 		</section>
+
+	<section class="about_us_2 white-space clean-white">
+	    <div class="lc">
+	    	<div class="reveal">
+	    		<h2>At Life Coded, our goal is to help teams work more effficiently, improve communication, and automate management, so teams can accomplish big things together in less time. Join us.</h2>
+	    	</div>
+	    </div>
+	</section>
+
+	<section class="gallery white-space clean-white">
+		<div class="lc">
+			<div class="g-2up reveal">
+				<div class="gi">
+					<img src="images/photo_1.jpg" alt="">
+				</div>
+				<div class="gi">
+					<img src="images/photo_2.jpg" alt="">
+				</div>
+			</div>
+
+			<div class="g-1up reveal">
+				<div class="gi">
+					<img src="images/photo_3.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<section class="hiring white-space" id="hiring">
 	    <div class="lc">
