--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	    			<li><a href="#">Home</a></li>
 	    			<li><a href="#about">About</a></li>
 	    	        <li><a href="#products">Products</a></li>
-	    			<!-- <li><a href="#blog">Blog</a></li> -->
+	    			<li><a href="#hiring">Jobs</a></li>
 	    			<li><a href="#footer">Contact</a></li>
 	    		</ul>
     		</nav>
