Gallery section updates

--- a/index.html
+++ b/index.html
@@ -205,30 +205,35 @@
     			</div>
 		</section>
 
-	<section class="about_us_2 white-space clean-white">
+<!-- 	<section class="about_us_2 white-space clean-white">
 	    <div class="lc">
 	    	<div class="reveal">
-	    		<h2>At Life Coded, our goal is to help teams work more effficiently, improve communication, and automate management, so teams can accomplish big things together in less time. Join us.</h2>
+	    		<h2>At Life Coded, our goal is to help teams work more efficiently, improve communication, and automate management, so teams can accomplish big things together in less time. Join us.</h2>
 	    	</div>
 	    </div>
-	</section>
+	</section> -->
 
-	<section class="gallery white-space clean-white">
+	<section class="white-space clean-white">
 		<div class="lc">
-			<div class="g-2up reveal">
-				<div class="gi">
-					<img src="images/photo_1.jpg" alt="">
+			<div class="reveal about_us_2">
+	    		<h2>At Life Coded, our goal is to help teams work more efficiently, improve communication, and automate management, so teams can accomplish big things together in less time. Join us.</h2>
+	    	</div>
+	    	<div class="gallery">
+	    		<div class="g-2up reveal">
+					<div class="gi">
+						<img src="images/photo_1@2x.jpg" alt="">
+					</div>
+					<div class="gi">
+						<img src="images/photo_2@2x.jpg" alt="">
+					</div>
 				</div>
-				<div class="gi">
-					<img src="images/photo_2.jpg" alt="">
-				</div>
-			</div>
 
-			<div class="g-1up reveal">
-				<div class="gi">
-					<img src="images/photo_3.jpg" alt="">
+				<div class="g-1up reveal">
+					<div class="gi">
+						<img src="images/photo_3@2x.jpg" alt="">
+					</div>
 				</div>
-			</div>
+	    	</div>
 		</div>
 	</section>
 
@@ -236,7 +241,7 @@
 	    <div class="lc">
 	        <div class="center-e">
 	            <h1>We're hiring</h1>
-	            <p class="small-inset">At Life Coded we're powering human intuition with artificial intelligence.<br>We help teams work together more efficiently, accomplishing larger goals in less time. Join us.</p>
+	            <!-- <p class="small-inset">At Life Coded we're powering human intuition with artificial intelligence.<br>We help teams work together more efficiently, accomplishing larger goals in less time. Join us.</p> -->
 	            <div class="table">
 		            <ul class="job-list">
 		            	<li><button class="button btn btn-b md-trigger" data-target-modal="modal-1">React.js Software Engineer</button></li>
